@@ -5,7 +5,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class AppUserDetails implements UserDetails {
     private final User user;
@@ -13,7 +13,9 @@ public class AppUserDetails implements UserDetails {
     public AppUserDetails(User user) { this.user = user; }
 
     @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() { return Collections.emptyList(); }
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return List.of(() -> "ROLE_" + user.getRole().name());
+    }
 
     @Override
     public String getPassword() { return user.getPassword(); }
